--- a/app/src/main/res/layout/activity_edit_profile_page.xml
+++ b/app/src/main/res/layout/activity_edit_profile_page.xml
@@ -50,8 +50,10 @@
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/text_save_changes"
@@ -61,7 +63,6 @@
         android:layout_marginStart="19dp"
         android:layout_marginTop="31dp"
         android:layout_marginEnd="18dp"
-        android:layout_marginBottom="38dp"
         android:gravity="left|center_vertical"
         android:includeFontPadding="false"
         android:maxLines="1"
@@ -69,100 +70,9 @@
         android:text="Save changes"
         android:textColor="#FFFFFFFF"
         android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/image_rectangle1"
         app:layout_constraintEnd_toEndOf="@+id/image_rectangle3"
         app:layout_constraintStart_toStartOf="@+id/image_rectangle3"
         app:layout_constraintTop_toBottomOf="@+id/image_rectangle5" />
-
-    <ImageView
-        android:id="@+id/image_rectangle1"
-        android:layout_width="390dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="756dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginBottom="38dp"
-        android:background="@drawable/image_rectangle1"
-        android:scaleType="centerInside"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/image_vector"
-        android:layout_width="78dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="79dp"
-        android:layout_marginTop="756dp"
-        android:layout_marginEnd="236dp"
-        android:layout_marginBottom="38dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/image_vector"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/image_vector1"
-        android:layout_width="78dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="756dp"
-        android:layout_marginEnd="314dp"
-        android:layout_marginBottom="38dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/image_vector1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/iv_settings"
-        android:layout_width="78dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="313dp"
-        android:layout_marginTop="756dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginBottom="38dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/iv_settings"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/img_all_small_buy"
-        android:layout_width="78dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="235dp"
-        android:layout_marginTop="756dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="38dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/img_all_small_buy"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/container_group"
-        android:layout_width="78dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="157dp"
-        android:layout_marginTop="756dp"
-        android:layout_marginEnd="158dp"
-        android:layout_marginBottom="38dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/container_group"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text_edit_profile"
@@ -280,7 +190,7 @@
         android:layout_marginTop="496dp"
         android:layout_marginEnd="62dp"
         android:layout_marginBottom="298dp"
-        android:background="@drawable/image_rectangle6"
+        android:background="@drawable/image_view_rectangle1"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -295,7 +205,7 @@
         android:layout_marginTop="398dp"
         android:layout_marginEnd="61dp"
         android:layout_marginBottom="396dp"
-        android:background="@drawable/image_rectangle4"
+        android:background="@drawable/image_view_rectangle1"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -310,7 +220,7 @@
         android:layout_marginTop="301dp"
         android:layout_marginEnd="61dp"
         android:layout_marginBottom="493dp"
-        android:background="@drawable/image_rectangle4"
+        android:background="@drawable/image_view_rectangle1"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -346,7 +256,7 @@
         android:layout_marginTop="598dp"
         android:layout_marginEnd="63dp"
         android:layout_marginBottom="196dp"
-        android:background="@drawable/image_rectangle5"
+        android:background="@drawable/image_view_rectangle1"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -389,5 +299,18 @@
         app:layout_constraintEnd_toEndOf="@+id/image_rectangle5"
         app:layout_constraintStart_toStartOf="@+id/image_rectangle5"
         app:layout_constraintTop_toTopOf="@+id/image_rectangle5" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="40dp"
+        app:labelVisibilityMode="unlabeled"
+        app:layout_constraintBaseline_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
