--- a/app/src/main/res/layout/activity_settings_page.xml
+++ b/app/src/main/res/layout/activity_settings_page.xml
@@ -22,78 +22,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/image_rectangle1"
-        android:layout_width="414dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="752dp"
-        android:layout_marginBottom="39dp"
-        android:background="@drawable/iv_home_page_rectangle3"
-        android:scaleType="centerInside"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imgSaved"
-        android:layout_width="80dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="243dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/image_vector"
-        app:layout_constraintEnd_toEndOf="@+id/image_rectangle1"
-        app:layout_constraintTop_toTopOf="@+id/image_rectangle1" />
-
-    <ImageView
-        android:id="@+id/imgHome"
-        android:layout_width="80dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="323dp"
-        android:layout_marginBottom="39dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/image_vector1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/image_rectangle1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/image_rectangle1" />
-
-    <ImageView
-        android:id="@+id/imgSetting"
-        android:layout_width="87dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="38dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/iv_settings"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgCartList"
-        app:layout_constraintTop_toTopOf="@+id/image_rectangle1" />
-
-    <ImageView
-        android:id="@+id/imgCartList"
-        android:layout_width="80dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="83dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/drawable_image"
-        app:layout_constraintEnd_toEndOf="@+id/image_rectangle1"
-        app:layout_constraintTop_toTopOf="@+id/image_rectangle1" />
-
-    <ImageView
-        android:id="@+id/imgCalender"
-        android:layout_width="80dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="163dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/container_group"
-        app:layout_constraintEnd_toEndOf="@+id/image_rectangle1"
-        app:layout_constraintTop_toTopOf="@+id/image_rectangle1" />
-
-    <ImageView
         android:id="@+id/btnBack"
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -479,5 +407,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="40dp"
+        app:labelVisibilityMode="unlabeled"
+        app:layout_constraintBaseline_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
