--- a/app/src/main/res/layout/activity_shopping_list_page.xml
+++ b/app/src/main/res/layout/activity_shopping_list_page.xml
@@ -18,36 +18,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/img_shopping_list2"
-        android:layout_width="395dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="756dp"
-        android:layout_marginBottom="196dp"
-        android:background="@drawable/img_shopping_list2"
-        android:scaleType="centerInside"
-        app:layout_constraintBottom_toBottomOf="@+id/img_shopping_list1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/img_shopping_list1" />
-
-    <ImageView
-        android:id="@+id/img_shopping_list3"
-        android:layout_width="78dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="103dp"
-        android:layout_marginTop="768dp"
-        android:layout_marginEnd="447dp"
-        android:layout_marginBottom="216dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/img_shopping_list3"
-        app:layout_constraintBottom_toBottomOf="@+id/img_shopping_list1"
-        app:layout_constraintEnd_toEndOf="@+id/img_shopping_list1"
-        app:layout_constraintHorizontal_bias="0.343"
-        app:layout_constraintStart_toStartOf="@+id/img_shopping_list1"
-        app:layout_constraintTop_toTopOf="@+id/img_shopping_list1"
-        app:layout_constraintVertical_bias="0.375" />
-
-    <ImageView
         android:id="@+id/imageView3"
         android:layout_width="349dp"
         android:layout_height="62dp"
@@ -61,74 +31,6 @@
         app:layout_constraintStart_toStartOf="@+id/img_shopping_list1"
         app:layout_constraintTop_toTopOf="@+id/img_shopping_list1"
         app:srcCompat="@drawable/container_button" />
-
-    <ImageView
-        android:id="@+id/img_shopping_list5"
-        android:layout_width="78dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="766dp"
-        android:layout_marginEnd="517dp"
-        android:layout_marginBottom="217dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/img_shopping_list5"
-        app:layout_constraintBottom_toBottomOf="@+id/img_shopping_list1"
-        app:layout_constraintEnd_toEndOf="@+id/img_shopping_list1"
-        app:layout_constraintHorizontal_bias="0.406"
-        app:layout_constraintStart_toStartOf="@+id/img_shopping_list1"
-        app:layout_constraintTop_toTopOf="@+id/img_shopping_list1"
-        app:layout_constraintVertical_bias="0.322" />
-
-    <ImageView
-        android:id="@+id/iv_settings"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="319dp"
-        android:layout_marginTop="768dp"
-        android:layout_marginEnd="221dp"
-        android:layout_marginBottom="210dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/iv_settings"
-        app:layout_constraintBottom_toBottomOf="@+id/img_shopping_list1"
-        app:layout_constraintEnd_toEndOf="@+id/img_shopping_list1"
-        app:layout_constraintHorizontal_bias="0.071"
-        app:layout_constraintStart_toStartOf="@+id/img_shopping_list1"
-        app:layout_constraintTop_toTopOf="@+id/img_shopping_list1"
-        app:layout_constraintVertical_bias="0.461" />
-
-    <ImageView
-        android:id="@+id/image_all_small_buy"
-        android:layout_width="78dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="247dp"
-        android:layout_marginTop="768dp"
-        android:layout_marginEnd="293dp"
-        android:layout_marginBottom="210dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/image_all_small_buy"
-        app:layout_constraintBottom_toBottomOf="@+id/img_shopping_list1"
-        app:layout_constraintEnd_toEndOf="@+id/img_shopping_list1"
-        app:layout_constraintHorizontal_bias="0.185"
-        app:layout_constraintStart_toStartOf="@+id/img_shopping_list1"
-        app:layout_constraintTop_toTopOf="@+id/img_shopping_list1"
-        app:layout_constraintVertical_bias="0.461" />
-
-    <ImageView
-        android:id="@+id/container_group"
-        android:layout_width="78dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="183dp"
-        android:layout_marginTop="768dp"
-        android:layout_marginEnd="357dp"
-        android:layout_marginBottom="210dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/container_group"
-        app:layout_constraintBottom_toBottomOf="@+id/img_shopping_list1"
-        app:layout_constraintEnd_toEndOf="@+id/img_shopping_list1"
-        app:layout_constraintHorizontal_bias="0.444"
-        app:layout_constraintStart_toStartOf="@+id/img_shopping_list1"
-        app:layout_constraintTop_toTopOf="@+id/img_shopping_list1"
-        app:layout_constraintVertical_bias="0.461" />
 
     <ImageView
         android:id="@+id/leading_icon_image"
@@ -255,5 +157,18 @@
         app:layout_constraintEnd_toEndOf="@+id/img_shopping_list1"
         app:layout_constraintStart_toStartOf="@+id/img_shopping_list1"
         app:layout_constraintTop_toTopOf="@+id/img_shopping_list1" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="40dp"
+        app:labelVisibilityMode="unlabeled"
+        app:layout_constraintBaseline_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
