--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -35,7 +35,7 @@
         app:srcCompat="@drawable/image_view_rectanglesignup" />
 
     <Button
-        android:id="@+id/btnSignupPage"
+        android:id="@+id/btnSignupPage2"
         android:layout_width="130dp"
         android:layout_height="60dp"
         android:layout_marginTop="269dp"
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toTopOf="@+id/image_logo" />
 
     <Button
-        android:id="@+id/BtnLoginPage"
+        android:id="@+id/btnLoginPage2"
         android:layout_width="130dp"
         android:layout_height="60dp"
         android:layout_marginStart="83dp"
@@ -77,6 +77,22 @@
         app:layout_constraintStart_toStartOf="@+id/image_logo"
         app:layout_constraintTop_toTopOf="@+id/image_logo" />
 
+    <EditText
+        android:id="@+id/txtLUsername"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="130dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="270dp"
+        android:background="@drawable/image_view_rectangle1"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        tools:ignore="SpeakableTextPresentCheck" />
+
     <FrameLayout
         android:id="@+id/container_button"
         android:layout_width="224dp"
@@ -102,22 +118,6 @@
     </FrameLayout>
 
     <EditText
-        android:id="@+id/txtLUsername"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="130dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="270dp"
-        android:background="@drawable/image_view_rectangle1"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <EditText
         android:id="@+id/edtEmail"
         android:layout_width="300dp"
         android:layout_height="50dp"
@@ -125,7 +125,7 @@
         android:layout_marginTop="220dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="180dp"
-        android:background="@drawable/image_view_rectangle1"
+        android:background="@drawable/image_rectangle200"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.0"
@@ -170,26 +170,25 @@
         android:id="@+id/container_pass"
         android:layout_width="160dp"
         android:layout_height="24dp"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="607dp"
-        android:layout_marginEnd="119dp"
-        android:layout_marginBottom="34dp"
+        android:layout_marginTop="602dp"
+        android:layout_marginEnd="132dp"
+        android:layout_marginBottom="40dp"
         android:gravity="center_horizontal|center_vertical"
         android:text="Confirm Password"
         android:textColor="#FF000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/edtCPassword"
         app:layout_constraintEnd_toEndOf="@+id/edtCPassword"
-        app:layout_constraintStart_toStartOf="@+id/edtCPassword"
-        app:layout_constraintTop_toTopOf="@+id/image_logo" />
+        app:layout_constraintTop_toTopOf="@+id/image_logo"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/text_email"
         android:layout_width="51dp"
         android:layout_height="22dp"
-        android:layout_marginStart="88dp"
+        android:layout_marginStart="72dp"
         android:layout_marginTop="209dp"
-        android:layout_marginEnd="425dp"
+        android:layout_marginEnd="443dp"
         android:layout_marginBottom="388dp"
         android:alpha="0.800000011920929"
         android:gravity="left|center_vertical"
