Added the back arrows

--- a/app/src/main/res/layout/activity_meal_planner_page.xml
+++ b/app/src/main/res/layout/activity_meal_planner_page.xml
@@ -52,17 +52,17 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toTopOf="@id/buttonDone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dateRange"
-        app:layout_constraintBottom_toTopOf="@id/buttonDone">
+        app:layout_constraintTop_toBottomOf="@id/dateRange">
 
         <LinearLayout
             android:id="@+id/daySelectionLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"> <!-- Centering items inside the layout -->
+            android:gravity="center"
+            android:orientation="vertical"> <!-- Centering items inside the layout -->
 
             <!-- Sunday -->
             <androidx.cardview.widget.CardView
@@ -294,5 +294,33 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="328dp"
+        android:layout_marginBottom="739dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/img_shopping_list2" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="321dp"
+        android:layout_marginBottom="739dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_arrow_back_ios" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
