--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -1,32 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:orientation="vertical"
-    app:cardCornerRadius="12dp"
-    app:cardElevation="4dp">
+    android:layout_margin="8dp">
 
-
-    <ImageView
-        android:id="@+id/iv_recipe_image"
-        android:layout_width="150dp"
-        android:layout_height="250dp"
-        android:scaleType="centerCrop" />
-
-
-    <TextView
-        android:id="@+id/tv_recipe_title"
-        android:layout_width="150dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#99000000"
-        android:padding="8dp"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        android:text="Recipe Title" />
+        android:orientation="vertical"
+        android:padding="8dp">
 
+        <ImageView
+            android:id="@+id/iv_recipe_image"
+            android:layout_width="wrap_content"
+            android:layout_height="120dp"
+            android:scaleType="centerCrop" />
 
+        <TextView
+            android:id="@+id/tv_recipe_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Recipe Title"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:paddingTop="8dp" />
+
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
