fixed the padding on login

--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -143,6 +143,7 @@
         android:layout_marginTop="437dp"
         android:layout_marginEnd="133dp"
         android:layout_marginBottom="357dp"
+        android:padding="8dp"
         android:background="@drawable/image_view_rectangle1"
         app:layout_constraintBottom_toBottomOf="@+id/image_view_background"
         app:layout_constraintEnd_toEndOf="@+id/image_view_background"
@@ -156,6 +157,7 @@
         android:layout_marginStart="131dp"
         android:layout_marginTop="533dp"
         android:layout_marginEnd="134dp"
+        android:padding="8dp"
         android:layout_marginBottom="261dp"
         android:background="@drawable/image_view_rectangle1"
         android:inputType="textPassword"
