--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -23,9 +23,10 @@
                 android:id="@+id/iv_recipe_image"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:scaleType="centerCrop"
                 android:contentDescription="@null"
-                app:layout_collapseMode="parallax" />
+                android:scaleType="centerCrop"
+                app:layout_collapseMode="parallax"
+                tools:ignore="ImageContrastCheck" />
 
             <!-- TabLayout -->
             <com.google.android.material.tabs.TabLayout
